[gd_scene load_steps=59 format=3 uid="uid://cs48dyw3fvxcm"]

[ext_resource type="PackedScene" uid="uid://dj2t3qeu8vp8i" path="res://Scenes/Characters/Roger.tscn" id="1_af3mk"]
[ext_resource type="Script" uid="uid://bsfvteyjd7d5q" path="res://Scripts/Core/Game Manager.gd" id="1_ah4vs"]
[ext_resource type="Script" uid="uid://cqdvwxuqhb41a" path="res://Scripts/Characters/Player.gd" id="2_v6gkx"]
[ext_resource type="Script" uid="uid://elwqy7yocyub" path="res://Scripts/Core/Camera.gd" id="3_ah4vs"]
[ext_resource type="PackedScene" uid="uid://d3vp5mq3sy7hu" path="res://Scenes/Environment/BackGround.tscn" id="4_t7cte"]
[ext_resource type="PackedScene" uid="uid://cvy6fvm0rka1j" path="res://Scenes/Levels/Level I.tscn" id="5_gralk"]
[ext_resource type="Script" uid="uid://di3u14pkxns4d" path="res://Scripts/Treasures/Coin Counter.gd" id="7_kmmkm"]
[ext_resource type="Texture2D" uid="uid://c7gsgjalh7jub" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/36.png" id="7_t7cte"]
[ext_resource type="Texture2D" uid="uid://ikh8yilc6x32" path="res://Treasure Hunters/Pirate Treasure/Gold Coin/01.png" id="7_xlfh5"]
[ext_resource type="Texture2D" uid="uid://bcihcok8vy5j0" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/27.png" id="9_e8w2b"]
[ext_resource type="Texture2D" uid="uid://bi4alswn4udyp" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/28.png" id="10_lijq2"]
[ext_resource type="Texture2D" uid="uid://blquv6tfbuijm" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/29.png" id="11_n62cl"]
[ext_resource type="Texture2D" uid="uid://dwom6q8rxrsxy" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/30.png" id="12_c1vld"]
[ext_resource type="Texture2D" uid="uid://b2ry2wftrwmpi" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/31.png" id="13_6sinx"]
[ext_resource type="Texture2D" uid="uid://b3t4sguv4rsfw" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/32.png" id="14_p1b62"]
[ext_resource type="Texture2D" uid="uid://ccquc3d3hgra7" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/33.png" id="15_cn72a"]
[ext_resource type="Texture2D" uid="uid://dyca63127xl6s" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/34.png" id="16_mjwtp"]
[ext_resource type="Texture2D" uid="uid://t44sbcrc3ee2" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/35.png" id="17_ij3x7"]
[ext_resource type="Texture2D" uid="uid://dw5xvm0hrpj1c" path="res://Treasure Hunters/Pirate Treasure/Golden Skull/00.png" id="19_mjwtp"]
[ext_resource type="Texture2D" uid="uid://djgatdcxry4o0" path="res://Treasure Hunters/Merchant Ship/Chest Key/Idle/1.png" id="20_n62cl"]
[ext_resource type="PackedScene" uid="uid://c51rn4rj4etxi" path="res://Scenes/Treasures/Fade.tscn" id="21_c1vld"]
[ext_resource type="Texture2D" uid="uid://vwkjggmlcy47" path="res://Treasure Hunters/Wood and Paper UI/Life Bars/Big Bars/1.png" id="22_cn72a"]
[ext_resource type="Script" uid="uid://cyxi7jq2usnah" path="res://Scripts/Health/Health.gd" id="22_ij3x7"]
[ext_resource type="Texture2D" uid="uid://b41ohh83nhqm5" path="res://Treasure Hunters/Wood and Paper UI/Life Bars/Big Bars/3.png" id="23_mjwtp"]
[ext_resource type="Texture2D" uid="uid://1x867sowh72v" path="res://Treasure Hunters/Wood and Paper UI/Life Bars/Big Bars/4.png" id="24_ij3x7"]
[ext_resource type="Texture2D" uid="uid://dw34wo5h8pnhs" path="res://Treasure Hunters/Wood and Paper UI/Life Bars/Colors/1.png" id="25_ij3x7"]
[ext_resource type="Texture2D" uid="uid://ckgfd6tetwy2y" path="res://Treasure Hunters/Wood and Paper UI/Yellow Button/1.png" id="26_ei0a4"]
[ext_resource type="Texture2D" uid="uid://bnun03turkkkx" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/7.png" id="26_oiaup"]
[ext_resource type="Texture2D" uid="uid://b2p1w45nxjxhf" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/1.png" id="27_a3h3k"]
[ext_resource type="Texture2D" uid="uid://dm2esk3m1o6qk" path="res://Treasure Hunters/Wood and Paper UI/Green Button/1.png" id="27_e075f"]
[ext_resource type="Texture2D" uid="uid://wu14oeb52tx" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/13.png" id="28_0ys2m"]
[ext_resource type="Texture2D" uid="uid://c4gn5rsjsybm6" path="res://Treasure Hunters/Wood and Paper UI/Prefabs/9.png" id="28_cejut"]
[ext_resource type="Texture2D" uid="uid://bdel0s380efac" path="res://Treasure Hunters/Wood and Paper UI/Small Banner/7.png" id="28_to1gt"]
[ext_resource type="Texture2D" uid="uid://c6drj6knyl03q" path="res://Treasure Hunters/Wood and Paper UI/Prefabs/3.png" id="28_y7h2s"]
[ext_resource type="Texture2D" uid="uid://xe5tos8uow4d" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/5.png" id="29_w54jy"]
[ext_resource type="Texture2D" uid="uid://db4qin44qmeb4" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/15.png" id="30_to1gt"]
[ext_resource type="Texture2D" uid="uid://ca3x6exi04qq" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/22.png" id="31_2s3vw"]
[ext_resource type="Texture2D" uid="uid://isr8cwxg0qh0" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/18.png" id="32_ei0a4"]
[ext_resource type="Texture2D" uid="uid://bm7g3i2vagewo" path="res://Treasure Hunters/Wood and Paper UI/Small Banner/3.png" id="33_to1gt"]
[ext_resource type="Texture2D" uid="uid://vofpvej3kt2m" path="res://Treasure Hunters/Wood and Paper UI/Small Banner/2.png" id="34_2s3vw"]
[ext_resource type="Texture2D" uid="uid://cx4ftur13m573" path="res://Treasure Hunters/Wood and Paper UI/Small Banner/13.png" id="36_e075f"]
[ext_resource type="Texture2D" uid="uid://g7v5pr0vftcm" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Icons/2.png" id="39_etnmj"]
[ext_resource type="Texture2D" uid="uid://yr1lbldcqvih" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Icons/8.png" id="40_1serq"]
[ext_resource type="Texture2D" uid="uid://c1qcshsw0fng7" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/20.png" id="40_2aybk"]
[ext_resource type="Texture2D" uid="uid://b4v2t2vnr1qam" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Icons/15.png" id="41_2aybk"]
[ext_resource type="Texture2D" uid="uid://ce40fs0w22xn3" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/25.png" id="41_pq8t3"]
[ext_resource type="Texture2D" uid="uid://5sw2cmeeiw5" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/12.png" id="43_pq8t3"]
[ext_resource type="Texture2D" uid="uid://cydggkhws70c3" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/17.png" id="45_it6vq"]
[ext_resource type="Texture2D" uid="uid://dsik10isaxss8" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/21.png" id="46_y7h2s"]
[ext_resource type="Texture2D" uid="uid://cn7ujp7itx7wt" path="res://Treasure Hunters/Wood and Paper UI/Small Text/Small Text/9.png" id="47_cejut"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e075f"]
texture = ExtResource("27_e075f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 8.0
modulate_color = Color(0.501961, 0.501961, 0.501961, 0.501961)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o82to"]
texture = ExtResource("26_ei0a4")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ei0a4"]
texture = ExtResource("26_ei0a4")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_etnmj"]
texture = ExtResource("27_e075f")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1serq"]
texture = ExtResource("26_ei0a4")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 8.0
modulate_color = Color(0.501961, 0.501961, 0.501961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y7h2s"]
texture = ExtResource("28_cejut")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_it6vq"]
texture = ExtResource("28_y7h2s")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Theme" id="Theme_to1gt"]
Button/styles/disabled = SubResource("StyleBoxTexture_e075f")
Button/styles/focus = SubResource("StyleBoxTexture_o82to")
Button/styles/hover = SubResource("StyleBoxTexture_ei0a4")
Button/styles/normal = SubResource("StyleBoxTexture_etnmj")
Button/styles/pressed = SubResource("StyleBoxTexture_1serq")
Panel/styles/panel = SubResource("StyleBoxTexture_y7h2s")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_it6vq")

[node name="Game" type="Node2D"]
script = ExtResource("1_ah4vs")

[node name="Roger" parent="." instance=ExtResource("1_af3mk")]
position = Vector2(2406, 492)
_speed = 8.0
_acceleration = 16.0
_deceleration = 32.0
_density = 0.1
_invincible_duration = 0.0

[node name="Player" type="Node" parent="Roger"]
script = ExtResource("2_v6gkx")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("_subject")]
position = Vector2(2573, 542)
zoom = Vector2(3, 3)
script = ExtResource("3_ah4vs")
_subject = NodePath("../Roger")
_offset = Vector2(2, -1)
_look_ahead_trans_type = 1
_look_ahead_ease_type = 2
_floor_height_trans_type = 1
_floor_height_ease_type = 1
_floor_height_duration = 0.5

[node name="BackGround" parent="Camera2D" instance=ExtResource("4_t7cte")]
position = Vector2(0, 8)

[node name="Level" parent="." instance=ExtResource("5_gralk")]

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="CoinCounter" type="HBoxContainer" parent="GameUI"]
offset_left = 6.0
offset_top = 90.0
offset_right = 76.0
offset_bottom = 130.0
scale = Vector2(1.7, 1.7)
script = ExtResource("7_kmmkm")
_digits = Array[Texture2D]([ExtResource("7_t7cte"), ExtResource("9_e8w2b"), ExtResource("10_lijq2"), ExtResource("11_n62cl"), ExtResource("12_c1vld"), ExtResource("13_6sinx"), ExtResource("14_p1b62"), ExtResource("15_cn72a"), ExtResource("16_mjwtp"), ExtResource("17_ij3x7")])
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="GameUI/CoinCounter"]
layout_mode = 2
texture = ExtResource("7_xlfh5")
expand_mode = 3
stretch_mode = 5

[node name="Ones" type="TextureRect" parent="GameUI/CoinCounter"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("7_t7cte")
expand_mode = 5
stretch_mode = 5

[node name="Tens" type="TextureRect" parent="GameUI/CoinCounter"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("7_t7cte")
expand_mode = 5
stretch_mode = 5

[node name="LivesCounter" type="HBoxContainer" parent="GameUI"]
offset_left = 8.0
offset_top = 180.0
offset_right = 83.0
offset_bottom = 220.0
scale = Vector2(1.5, 1.5)
script = ExtResource("7_kmmkm")
_digits = Array[Texture2D]([ExtResource("7_t7cte"), ExtResource("9_e8w2b"), ExtResource("10_lijq2"), ExtResource("11_n62cl"), ExtResource("12_c1vld"), ExtResource("13_6sinx"), ExtResource("14_p1b62"), ExtResource("15_cn72a"), ExtResource("16_mjwtp"), ExtResource("17_ij3x7")])
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="GameUI/LivesCounter"]
layout_mode = 2
texture = ExtResource("19_mjwtp")
expand_mode = 3
stretch_mode = 5

[node name="Ones" type="TextureRect" parent="GameUI/LivesCounter"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("7_t7cte")
expand_mode = 5
stretch_mode = 5

[node name="Tens" type="TextureRect" parent="GameUI/LivesCounter"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("7_t7cte")
expand_mode = 5
stretch_mode = 5

[node name="KeyIcon" type="TextureRect" parent="GameUI"]
custom_minimum_size = Vector2(30, 30)
offset_left = 5.0
offset_top = 260.0
offset_right = 45.0
offset_bottom = 300.0
scale = Vector2(2, 2)
texture = ExtResource("20_n62cl")

[node name="HealthBar" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 18.0
offset_right = 58.0
offset_bottom = 40.0
scale = Vector2(3, 2.5)
script = ExtResource("22_ij3x7")

[node name="HealthContainer" type="HBoxContainer" parent="GameUI/HealthBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="GameUI/HealthBar/HealthContainer"]
layout_mode = 2
texture = ExtResource("22_cn72a")

[node name="TextureRect2" type="TextureRect" parent="GameUI/HealthBar/HealthContainer"]
layout_mode = 2
texture = ExtResource("23_mjwtp")

[node name="TextureRect3" type="TextureRect" parent="GameUI/HealthBar/HealthContainer"]
layout_mode = 2
texture = ExtResource("24_ij3x7")

[node name="Fill" type="TextureRect" parent="GameUI/HealthBar"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 92.0
offset_bottom = 19.5
texture = ExtResource("25_ij3x7")
expand_mode = 1

[node name="GameOver" type="Control" parent="GameUI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme = SubResource("Theme_to1gt")

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -68.0
offset_right = 80.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Banner" type="Control" parent="GameUI/GameOver/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = -100.0
offset_top = -20.0
offset_right = -60.0
offset_bottom = 20.0
texture = ExtResource("33_to1gt")

[node name="TextureRect2" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = -60.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
texture = ExtResource("36_e075f")

[node name="TextureRect3" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("28_to1gt")

[node name="TextureRect4" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = 20.0
offset_top = -26.0
offset_right = 60.0
offset_bottom = 14.0
texture = ExtResource("36_e075f")

[node name="TextureRect5" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = 60.0
offset_top = -26.0
offset_right = 100.0
offset_bottom = 14.0
texture = ExtResource("34_2s3vw")

[node name="GAME" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = -55.0
offset_top = -4.0
offset_right = -23.0
offset_bottom = 2.0
theme_override_constants/separation = 2

[node name="G" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/GAME"]
layout_mode = 2
texture = ExtResource("26_oiaup")

[node name="A" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/GAME"]
layout_mode = 2
texture = ExtResource("27_a3h3k")

[node name="M" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/GAME"]
layout_mode = 2
texture = ExtResource("28_0ys2m")

[node name="E" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/GAME"]
layout_mode = 2
texture = ExtResource("29_w54jy")

[node name="OVER" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Banner"]
layout_mode = 0
offset_left = 25.0
offset_top = -10.0
offset_right = 57.0
offset_bottom = -4.0

[node name="O" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/OVER"]
layout_mode = 2
texture = ExtResource("30_to1gt")

[node name="V" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/OVER"]
layout_mode = 2
texture = ExtResource("31_2s3vw")

[node name="E" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/OVER"]
layout_mode = 2
texture = ExtResource("29_w54jy")

[node name="R" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Banner/OVER"]
layout_mode = 2
texture = ExtResource("32_ei0a4")

[node name="Wood" type="PanelContainer" parent="GameUI/GameOver/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Paper" type="Panel" parent="GameUI/GameOver/VBoxContainer/Wood"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Retry" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="BTN_Retry" type="Button" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry"]
layout_mode = 2
icon = ExtResource("39_etnmj")

[node name="Label" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="R" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/Label"]
layout_mode = 2
texture = ExtResource("32_ei0a4")

[node name="E" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/Label"]
layout_mode = 2
texture = ExtResource("29_w54jy")

[node name="T" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/Label"]
layout_mode = 2
texture = ExtResource("40_2aybk")

[node name="R2" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/Label"]
layout_mode = 2
texture = ExtResource("32_ei0a4")

[node name="Y" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/Label"]
layout_mode = 2
texture = ExtResource("41_pq8t3")

[node name="Level Select" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="BTN_Level Select" type="Button" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select"]
layout_mode = 2
icon = ExtResource("40_1serq")

[node name="Label" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="L" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/Label"]
layout_mode = 2
texture = ExtResource("43_pq8t3")

[node name="E" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/Label"]
layout_mode = 2
texture = ExtResource("29_w54jy")

[node name="V" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/Label"]
layout_mode = 2
texture = ExtResource("31_2s3vw")

[node name="E2" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/Label"]
layout_mode = 2
texture = ExtResource("29_w54jy")

[node name="L2" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/Label"]
layout_mode = 2
texture = ExtResource("43_pq8t3")

[node name="Quit" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="BTN_Quit" type="Button" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit"]
layout_mode = 2
icon = ExtResource("41_2aybk")

[node name="Label" type="HBoxContainer" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="Q" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit/Label"]
layout_mode = 2
texture = ExtResource("45_it6vq")

[node name="U" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit/Label"]
layout_mode = 2
texture = ExtResource("46_y7h2s")

[node name="I" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit/Label"]
layout_mode = 2
texture = ExtResource("47_cejut")

[node name="T" type="TextureRect" parent="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit/Label"]
layout_mode = 2
texture = ExtResource("40_2aybk")

[node name="Fade" parent="GameUI" instance=ExtResource("21_c1vld")]

[node name="Victory" type="AudioStreamPlayer2D" parent="."]

[connection signal="changed_direction" from="Roger" to="Camera2D" method="_on_subject_changed_direction"]
[connection signal="dead" from="Roger" to="." method="_on_player_dead"]
[connection signal="health_changed" from="Roger" to="GameUI/HealthBar" method="set_value"]
[connection signal="landed" from="Roger" to="Camera2D" method="_on_subject_landed"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Retry/BTN_Retry" to="." method="_on_btn_retry_pressed"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Level Select/BTN_Level Select" to="." method="_on_btn_level_select_pressed"]
[connection signal="pressed" from="GameUI/GameOver/VBoxContainer/Wood/VBoxContainer/Quit/BTN_Quit" to="." method="_on_btn_quit_pressed"]
